# kokoroTTS

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  VERSION  pyproject.toml
.github/workflows/: docker-build-tiny.yml  docker-build.yml
docs/: dockerhub.md
kokorotts/: README.md  __init__.py  __main__.py  app.py  de_g2p.py  de_normalizer.py  pipeline.py  prefetch_assets.py  requirements.txt  sample_texts.py  voices.py
tests/: test_de_normalizer.py  test_http_client_long_stream.py
