[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokorotts"
version = "0.0.1"
description = "KokoroTTS UI + API"
readme = "README.md"
authors = [
    { name="TheMasterOfDisasters" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "huggingface_hub",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "torch",
    "transformers"
]

[project.scripts]
kokorotts = "kokorotts.__main__:main"
kokoro = "kokorotts.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokorotts"]
only-packages = true

[project.urls]
Homepage = "https://github.com/TheMasterOfDisasters/kokoroTTS"
Repository = "https://github.com/TheMasterOfDisasters/kokoroTTS"
